# fbmm-workspace

./: .gitignore  .gitmodules  README.md  kernel_options
bmks/: Makefile  alloc_test.c  badger-trap.c  fbmm_wrapper.c  fom_wrapper.c  stream.c
bmks/gups/: Makefile  gups  gups-hotset-move.c  gups.c  gups.h
bmks/pagewalk_coherence/: Makefile  paging.cc  pgmod.c
bmks/postgres/src/backend/port/: sysv_shmem.c
bmks/postgres/src/backend/utils/misc/: guc_tables.c
bmks/postgres/src/include/storage/: pg_shmem.h
bmks/spec2017/: spec-linux-x86.cfg
plots/: alloc_throughput.py  free_throughput.py  gups.py  memcached.py
runner/: Cargo.toml
runner/src/: fbmm_exp.rs  fom_exp.rs  main.rs  setup_kernel.rs  setup_wkspc.rs
scripts/: extract-alloc-sizes.py  extract-alloctest.py  extract-gups.py  extract-perf-stat.py  extract-stream.py  extract-ycsb.py  mm_fault_tracker.py  mmap_tracker.py  plot-perf-periodic.py  plot-stream-results.py  plot-tmmfs-stats-periodic.py  plot-ycsb-box.py  ycsb-runtime-histogram.py  yscb-runtime-histogram.py
